--- a/index.html
+++ b/index.html
@@ -33,28 +33,31 @@
         <h2>Tea of the Month</h2>
         <h4>What's Steeping at the Tea Cozy?</h4>
         <!-- Tea Images -->
-        <div class="tea-container">
-          <div class="tea">
-            <img class="tea-pic" src="resources/img/img-berryblitz.jpg" alt="Berry Blitz">
-            <h4 class="tea-name">Fall Berry Blitz Tea</h4>
+          <div class="tea-row">
+            <div class="tea">
+              <img class="tea-pic" src="resources/img/img-berryblitz.jpg" alt="Berry Blitz">
+              <h4 class="tea-name">Fall Berry Blitz Tea</h4>
+            </div>
+            <div class="tea">
+              <img class="tea-pic" src="resources/img/img-spiced-rum.jpg" alt="Spiced Rum">
+              <h4 class="tea-name">Spiced Rum Team</h4>
+            </div>
+            <div class="tea">
+              <img class="tea-pic" src="resources/img/img-donut.jpg" alt="Seasonal Donuts">
+              <h4 class="tea-name">Seasonal Donuts</h4>
+            </div>
           </div>
-          <div class="tea">
-            <img class="tea-pic" src="resources/img/img-spiced-rum.jpg" alt="Spiced Rum">
-            <h4 class="tea-name">Spiced Rum Team</h4>
+
+          <div class="tea-row">
+            <div class="tea">
+              <img class="tea-pic" src="resources/img/img-myrtle-ave.jpg" alt="Myrtle Ave">
+              <h4 class="tea-name">Myrtle Ave Tea</h4>
+            </div>
+            <div class="tea">
+              <img class="tea-pic" src="resources/img/img-bedford-bizarre.jpg" alt="Bedford Bizarre">
+              <h4 class="tea-name">Bedford Bizarre Tea</h4>
+            </div>
           </div>
-          <div class="tea">
-            <img class="tea-pic" src="resources/img/img-donut.jpg" alt="Seasonal Donuts">
-            <h4 class="tea-name">Seasonal Donuts</h4>
-          </div>
-          <div class="tea">
-            <img class="tea-pic" src="resources/img/img-myrtle-ave.jpg" alt="Myrtle Ave">
-            <h4 class="tea-name">Myrtle Ave Tea</h4>
-          </div>
-          <div class="tea">
-            <img class="tea-pic" src="resources/img/img-bedford-bizarre.jpg" alt="Bedford Bizarre">
-            <h4 class="tea-name">Bedford Bizarre Tea</h4>
-          </div>
-        </div>
       </div>
 
       <!-- Locations -->
@@ -94,7 +97,7 @@
         <h5>917-555-8904</h5>
       </div>
       <div class="copyright">
-        <p>&copy; The Tea Cozy 2017 </p>
+        <h5>&copy; The Tea Cozy 2017 </h5>
       </div>
 
     </div>
